[package]
name = "BachT_rust"
version = "25.5.0"
edition = "2021"

[[bin]]
name = "bach_core"
path = "src/core/main.rs"

[[bin]]
name = "bach_cli"
path = "src/cli/main.rs"

[dependencies]
nom = "=8.0.0"
regex = "=1.11.1"
rand = "0.9.0"
mockall = "0.13.1"
tokio = { version = "1", features = ["full"] }
